# cranial-prototype

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
anatomy/: __init__.py  annotate.py  cleanup.py  config.py  errors.py  io.py  landmarks.py  measurements.py  registration.py  synthetic.py
datamodel/: __init__.py  audit.py  case.py  clinical.py  constraints.py  design.py  errors.py  operations.py  provenance.py  scan_record.py  semantic.py
docs/: branch-protection.json
examples/: baseline.yaml  baseline_landmarks.json  brachy_landmarks.json  brachycephaly.yaml  demo_case.json  hand_authored_design.json  moderate_right_plagio.yaml  plagio_landmarks.json
kernel/: __init__.py  config.py  errors.py  generate.py
kernel/export/: __init__.py  stl.py
kernel/operations/: __init__.py  shell.py  trim.py
kernel/primitives/: __init__.py  relief.py  straps.py  test_head.py  vents.py
kernel/validation/: __init__.py  geometry.py  topology.py
scripts/: build_demo_case.py  build_helmet_from_design.py  check_no_llm_imports.py
storage/: __init__.py  blobs.py  errors.py  repository.py  schema.sql
synthesis/: __init__.py  errors.py  executor.py  pipeline.py  resolve.py  translator.py
tests/: conftest.py
tests/anatomy/: conftest.py  test_annotate.py  test_cleanup.py  test_io.py  test_landmarks.py  test_measurements.py  test_pipeline.py  test_registration.py  test_synthetic.py
tests/datamodel/: test_audit.py  test_case.py  test_clinical.py  test_design.py  test_provenance.py  test_roundtrip.py  test_scan_record.py  test_semantic.py
tests/fixtures/golden/: hashes.json
tests/kernel/: test_cli.py  test_config.py  test_determinism.py  test_no_llm_imports.py  test_relief.py  test_shell.py  test_straps.py  test_test_head.py  test_trim.py  test_validation.py  test_vents.py
tests/storage/: conftest.py  test_blobs.py  test_determinism.py  test_repository.py
tests/synthesis/: conftest.py  test_determinism.py  test_executor.py  test_patient_specificity.py  test_pipeline.py  test_resolve.py  test_slice.py  test_translator.py
