[project]
name = "cranial-prototype"
version = "0.1.0"
description = "Deterministic geometric kernel for cranial remolding helmet generation (Week 1 prototype)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Cranial Prototype Team" }]

# Versions are pinned exactly because determinism tests assert byte-identical
# STL output across runs. Changing any of these may shift mesh vertex/triangle
# ordering and break golden hashes — that is intentional, and any bump must be
# accompanied by a golden-hash refresh and a code-version bump.
dependencies = [
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "trimesh==4.5.3",
    "manifold3d==2.5.1",
    "libigl==2.5.1",
    "open3d==0.18.0",            # mesh queries (used from week 2)
    # cadquery: brief lists it, but cadquery 2.4 pulls in nlopt with no
    # macOS-arm64 wheel. cadquery is unused in week 1 ("where it helps" per
    # brief). Adding it back belongs in week 4+ when B-rep parametric
    # construction actually enters the kernel.
    "pyyaml==6.0.2",
    "scipy==1.13.1",             # SVD rigid registration (week 2); trimesh ops; pin for determinism
    "networkx==3.3",             # used by trimesh; pin for determinism
    "rtree==1.3.0",              # trimesh proximity / closest_point queries
    # --- week 2: anatomy package ---
    "pyvista==0.44.2",           # interactive 3D viz + point picking (annotation tool; pulls VTK)
    "pymeshfix==0.17.0",         # robust hole filling / non-manifold repair for raw scans
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.1",
    "pre-commit==4.0.1",
]

[project.scripts]
cranial-generate = "kernel.generate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "T20", # flake8-print (no bare print)
]
ignore = [
    "E501", # line too long, handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]  # allow print in test debugging

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# importlib import-mode lets test modules in different packages share a
# basename (tests/kernel/test_determinism.py and
# tests/storage/test_determinism.py) without __init__.py files — needed
# because week 3 must not add files under the week-1/2 test dirs.
addopts = "-ra -q --strict-markers --import-mode=importlib"
pythonpath = ["."]

[tool.coverage.run]
source = ["kernel"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
